--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Dengplum</h1>
       <h2 class="project-tagline">DengPlum Page</h2>
+      <img src="./image/qq_ioc.jpg">
     </section>
   </body>
 </html>
