--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Dengplum</title>
+	<link rel="icon" type="image/x-icon" href="./image/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -14,6 +15,29 @@
       <h1 class="project-name">Dengplum</h1>
       <h2 class="project-tagline">DengPlum Page</h2>
       <img src="./image/qq_ioc.jpg">
+      <img src="./image/dlam/1%20(1).ico">
+      <img src="./image/dlam/1%20(2).ico">
+      <img src="./image/dlam/1%20(3).ico">
+      <img src="./image/dlam/1%20(4).ico">
+      <img src="./image/dlam/1%20(5).ico">
+      <img src="./image/dlam/1%20(6).ico">
+      <img src="./image/dlam/1%20(7).ico">
+      <img src="./image/dlam/1%20(8).ico">
+      <img src="./image/dlam/1%20(9).ico">
+      <img src="./image/dlam/1%20(10).ico">
+      <img src="./image/dlam/1%20(11).ico">
+      <img src="./image/dlam/1%20(12).ico">
+      <img src="./image/dlam/1%20(13).ico">
+      <img src="./image/dlam/1%20(14).ico">
+      <img src="./image/dlam/1%20(15).ico">
+      <img src="./image/dlam/1%20(16).ico">
+      <img src="./image/dlam/1%20(17).ico">
+      <img src="./image/dlam/1%20(18).ico">
+      <img src="./image/dlam/1%20(19).ico">
+      <img src="./image/dlam/1%20(20).ico">
+      <img src="./image/dlam/1%20(21).ico">
+      <img src="./image/dlam/1%20(22).ico">
+      <img src="./image/dlam/1%20(23).ico">
     </section>
   </body>
 </html>
