--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Dengplum</h1>
-      <h2 class="project-tagline">DengPlum Page</h2>
+      <h1 class="project-name">Dengplum`s Page </h1>
+      <h2 class="project-tagline">DengPlum</h2>
 	  <img src="./image/duola-a-meng/duola-a-meng_01.png">
 	  <img src="./image/duola-a-meng/duola-a-meng_02.png">
 	  <img src="./image/duola-a-meng/duola-a-meng_03.png">
