--- a/index.html
+++ b/index.html
@@ -14,6 +14,117 @@
     <section class="page-header">
       <h1 class="project-name">DengPlum`s Page </h1>
       <h2 class="project-tagline">DengPlum</h2>
+		一百分的要求
+
+		不许故意惹梅梅吵架，要疼爱++
+		和亲爱的说话态度语气要温度
+		亲爱的说的话要记在心里不许忘记
+		努力满足梅梅的每一个要求
+		梅梅的事情就是我自己的事情
+		生活要爱干净做勤劳的小蜜蜂
+		天气冷的时候要握着亲爱的手
+		要记住亲爱的喜欢和讨厌的东西
+		千万不要吸烟喝酒打牌赌博
+		允许亲爱的宝贝有孩子气
+
+		亲爱的永远都是最最漂亮的
+		亲爱的宝贝撒娇永远是可爱的
+		要陪着梅梅一起走路散步看风景
+		对梅梅要有耐心不许责怪
+		要学会给梅梅洗梳头发
+		亲爱的每一件东西都要保存好
+		亲爱的做的饭再晚也一定要回来吃
+		遇到喜欢的东西首先要想到给亲爱的买
+		不能去让亲爱的洗衣服
+		要学会做好一道亲爱的喜欢吃的菜
+
+		要有耐心的去分享些好的东西给亲爱的
+		要学会给亲爱的涂指甲油但是不能有害
+		要经常给梅梅剪手指甲脚趾甲
+		可以给梅梅做喜欢做的事
+		过马路的时候要保护好亲爱的
+		逛街的时候要牵着梅梅的手
+		晚上睡觉要给亲爱的盖好被子
+		不能主动挂掉亲爱的电话
+		想宝贝的时候经常给宝贝发信息
+		遇到事情的时候要和梅梅商量多听
+
+		无论是否错了亲爱的哭了一定要哄宝贝
+		不能欺骗亲爱的宝贝
+		早上不能比亲爱的起来的要迟
+		晚上不能比亲爱的睡的要早
+		醒来的时候要偷偷亲一下宝贝的头发
+		要有爱心对宝贝
+		要尊敬亲爱的父母和好朋友
+		要努力去赚钱
+		和宝贝逛街的时候不能让亲爱的拿钱
+		在亲爱的朋友面前要更加紧张疼爱宝贝
+
+		亲爱的送的东西要珍藏不许弄丢
+		对亲爱的打扮要懂得欣赏和赞美
+		出门不能让亲爱的提重的东西
+		记住梅梅喜欢的东西特殊的日子给惊喜
+		亲爱的小奢的时候要支持不能责怪
+		亲爱的生病的时候要陪着抱着宝贝
+		记住梅梅的生日和有意义的日子
+		不能让亲爱的走在我前面要保护好宝贝
+		可以学会一首歌梅梅想听的时候唱
+		下雪的时候宝贝怕冷要抱紧亲爱的
+
+		任何时候都不能嫌弃亲爱的
+		有误会的时候不能和亲爱的冷战
+		在外面要告诉梅梅行踪不让宝贝担心
+		经常给亲爱的惊喜买喜欢的东西
+		记住亲爱的经常用的化妆品牌子
+		下班的时候有空要接梅梅一起回家
+		有好吃的东西要先给亲爱的吃再自己吃
+		要懂得浪漫
+		带着亲爱的一起去旅游放松心情
+		能陪着亲爱的一起买菜帮着砍价
+
+		梅梅累的时候要主动给亲爱的揉揉捶背
+		时时刻刻要让亲爱的感觉在乎你
+		亲爱的说话要认真听不能打马虎眼
+		下雨的时候要主动给亲爱的送伞
+		宝贝肚子疼的时候要让亲爱的感受到爱
+		出差回来要记得为亲爱的带上礼物
+		每天心里要想着亲爱的说我爱你
+		要怂恿亲爱的一起做运动锻炼
+		不管多忙回来要多陪陪亲爱的看电影
+		要学会给宝贝扎头发
+
+		钱包里面要放着一张亲爱的照片
+		在朋友面前要比平时更疼爱宝贝
+		多给亲爱的鼓励信心和勇气
+		亲亲亲爱的的时候要温柔
+		每天都要想亲爱的很多很多遍
+		亲爱的要有足够的财政大权
+		不能迷恋于游戏
+		每天要洗淑两次口
+		要欣赏亲爱的工作工资低不要紧
+		要有礼貌尊重亲爱的意见
+
+		不能让宝贝吃醋
+		要关心宝贝的身体健康和心理健康
+		要懂得宝贝的情绪
+		亲爱的晚上口渴的时候要帮宝贝拿水
+		可以随时为亲爱的弄一点吃的
+		不能嫌弃亲爱的会变胖
+		不在公共场合对宝贝呼呼吼吼
+		陪着亲爱的逛街不能觉得累
+		无论都要认定亲爱的是世界上最漂亮的
+		亲爱的喜欢吃的我也要学会喜欢吃
+
+		不能霸道大男子主义
+		亲爱的东西要像爱护宝贝一样不能乱放
+		和亲爱的吃完饭要自觉的去拖地洗碗
+		爱着宝贝要告诉她觉得很自豪和骄傲
+		要让朋友同事知道我已经有了爱的人
+		亲爱的说话不能立马去反驳
+		要有耐心的去教宝贝做一些事情
+		亲爱的可以欺负我不要害怕我会跑
+		和亲爱的在一起的每一天都要甜蜜蜜
+		每一天每一分每一秒都爱着亲爱的
     </section>
   </body>
 </html>
