--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<div class="footer">
 			<div class="wrap">
 			<div class="footer-left">
-				<p>Copyright &copy; 2016.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+				<p>Copyright &copy; 2016.Company name All rights reserved.<a target="_blank" href="#">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
 			</div>
 			<div class="footer-right">
 				<ul>
