--- a/about.html
+++ b/about.html
@@ -138,8 +138,7 @@
 		<div class="footer">
 			<div class="wrap">
 			<div class="footer-left">
-				<p>Copyright &copy; 2016.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-			</div>
+				<p>Copyright &copy; 2016.Company name All rights reserved.<a href="#">deng,mei</a></p>	</div>
 			<div class="footer-right">
 				<ul>
 					<li><a href="#">Our Loocations</a></li>
